fix: books are loaned to the next person in the reservation queue